--- a/libinitd-config/CMakeLists.txt
+++ b/libinitd-config/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(libinitd-config
    mount_options.cpp
    mount_options.h
    start_stop_task_data.h
+   start_stop_task_data.cpp
    task_data.h
    task_data.cpp
    task_description_fwd.h
