implement epoll wrapper and get rid of asio inside initd

--- a/libsysapi/CMakeLists.txt
+++ b/libsysapi/CMakeLists.txt
@@ -5,6 +5,12 @@ project(LIBSYSAPI)
 add_library(libsysapi
    file_descriptor.cpp
    file_descriptor.h
+   epoll.cpp
+   epoll.h
+   signalfd.cpp
+   signalfd.h
+   function_queue.cpp
+   function_queue.h
    errors.cpp
    errors.h
    loop_device.cpp
