implement parallel startup/shutdown

--- a/libinitd/CMakeLists.txt
+++ b/libinitd/CMakeLists.txt
@@ -8,25 +8,26 @@ include_directories("${LIBINITD_CONFIG_SOURCE_DIR}")
 include_directories("${LIBSYSAPI_SOURCE_DIR}")
 
 add_library(libinitd
-   initd_state.cpp  
-   initd_state.h
-   task.cpp
-   task.h
-   task_handle.cpp
-   task_handle.h
-   task_handle_fwd.h
-   task_queue.cpp
-   task_queue.h
-   tasks/null_task.cpp
-   tasks/null_task.h
-   tasks/failed_task.cpp
-   tasks/failed_task.h
-   tasks/hostname_task.cpp
-   tasks/hostname_task.h
-   tasks/mount_task.cpp
-   tasks/mount_task.h
-   tasks/start_stop_task.cpp
-   tasks/start_stop_task.h
+   initd_state2.cpp
+   initd_state2.h
+   tasks/async_task_handle.cpp
+   tasks/async_task_handle.h
+   tasks/async_task_handle_fwd.h
+   tasks/sync_task_adaptor.cpp
+   tasks/sync_task_adaptor.h
+   tasks/async_start_stop_task.cpp
+   tasks/async_start_stop_task.h
+   tasks/create_async_task_handle.cpp
+   tasks/create_async_task_handle.h
+   tasks/synchronous/task_handle.cpp
+   tasks/synchronous/task_handle.h
+   tasks/synchronous/task_handle_fwd.h
+   tasks/synchronous/null_task.cpp
+   tasks/synchronous/null_task.h
+   tasks/synchronous/hostname_task.cpp
+   tasks/synchronous/hostname_task.h
+   tasks/synchronous/mount_task.cpp
+   tasks/synchronous/mount_task.h
 )
 
 target_link_libraries(libinitd libsysapi)
