--- a/demo.conf
+++ b/demo.conf
@@ -101,3 +101,5 @@ print_hostname_after depends initialize_hostname;
 task_1 depends initialize_hostname;
 task_2 depends initialize_hostname;
 task_3 depends initialize_hostname;
+
+run_level default : print_hostname_after, task_1, task_2, task_3;
