new task (control) and new program initctl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
 #set(CMAKE_CXX_FLAGS_DEBUG "-g")
 
 add_subdirectory(libsysapi)
+add_subdirectory(libbinstream)
 add_subdirectory(libinitd-common)
 add_subdirectory(libinitd-config)
 add_subdirectory(libinitd-readconfig)
 add_subdirectory(libinitd)
 add_subdirectory(initd)
+add_subdirectory(initctl)
 add_subdirectory(test-config)
