cleanup project names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ add_subdirectory(libinitd-common)
 add_subdirectory(libinitd-config)
 add_subdirectory(libinitd-readconfig)
 add_subdirectory(libinitd)
-add_subdirectory(initd)
+add_subdirectory(init)
 add_subdirectory(initctl)
 add_subdirectory(test-config)
