cleanup build scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
-#set(CMAKE_CXX_FLAGS_DEBUG "-g")
+find_package(Threads)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
 add_subdirectory(libsysapi)
 add_subdirectory(libbinstream)
