--- a/libinitd-readconfig/CMakeLists.txt
+++ b/libinitd-readconfig/CMakeLists.txt
@@ -2,14 +2,13 @@ cmake_minimum_required (VERSION 2.6)
 
 project(LIBINITD_READCONFIG)
 
-find_package(Boost 1.48 COMPONENTS system REQUIRED)
-find_package(Threads)
+find_package(Boost 1.48)
 
-include_directories("${LIBINITD_CONFIG_SOURCE_DIR}")
-include_directories("${LIBINITD_READCONFIG_SOURCE_DIR}")
-include_directories("${LIBINITD_COMMON_SOURCE_DIR}")
-include_directories("${LIBSYSAPI_SOURCE_DIR}")
-include_directories("${Boost_INCLUDE_DIR}")
+include_directories("${LIBINITD_CONFIG_SOURCE_DIR}"
+		    "${LIBINITD_READCONFIG_SOURCE_DIR}"
+		    "${LIBINITD_COMMON_SOURCE_DIR}"
+		    "${LIBSYSAPI_SOURCE_DIR}"
+		    "${Boost_INCLUDE_DIR}")
 
 add_library(initd-readconfig
    lexer/get_raw_pointer.h
