--- a/test-config/CMakeLists.txt
+++ b/test-config/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required (VERSION 2.6)
 
 find_package(Boost 1.48 COMPONENTS unit_test_framework filesystem system REQUIRED)
 
-include_directories("${LIBINITD_COMMON_SOURCE_DIR}")
-include_directories("${LIBINITD_CONFIG_SOURCE_DIR}")
-include_directories("${LIBINITD_READCONFIG_SOURCE_DIR}")
-include_directories("${LIBSYSAPI_SOURCE_DIR}")
-include_directories("${Boost_INCLUDE_DIR}")
+include_directories("${LIBINITD_COMMON_SOURCE_DIR}"
+		    "${LIBINITD_CONFIG_SOURCE_DIR}"
+		    "${LIBINITD_READCONFIG_SOURCE_DIR}"
+		    "${LIBSYSAPI_SOURCE_DIR}"
+		    "${Boost_INCLUDE_DIR}")
 
 add_executable(initd-config-test
    main.cpp
