--- a/init/CMakeLists.txt
+++ b/init/CMakeLists.txt
@@ -1,17 +1,16 @@
 cmake_minimum_required (VERSION 2.6)
 
-find_package(Boost 1.48 COMPONENTS system REQUIRED)
-find_package(Threads)
+find_package(Boost 1.48)
 
-include_directories("${LIBINITD_SOURCE_DIR}")
-include_directories("${LIBINITD_COMMON_SOURCE_DIR}")
-include_directories("${LIBINITD_CONFIG_SOURCE_DIR}")
-include_directories("${LIBINITD_READCONFIG_SOURCE_DIR}")
-include_directories("${LIBSYSAPI_SOURCE_DIR}")
-include_directories("${Boost_INCLUDE_DIR}")
+include_directories("${LIBINITD_SOURCE_DIR}"
+		    "${LIBINITD_COMMON_SOURCE_DIR}"
+		    "${LIBINITD_CONFIG_SOURCE_DIR}"
+		    "${LIBINITD_READCONFIG_SOURCE_DIR}"
+		    "${LIBSYSAPI_SOURCE_DIR}"
+		    "${Boost_INCLUDE_DIR}")
 
 add_executable(init
    initd-main.cpp
 )
 
-target_link_libraries(init initd initd-readconfig initd-config sysapi ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(init initd initd-readconfig initd-config sysapi ${CMAKE_THREAD_LIBS_INIT})
