cleanup build scripts (take 2)

--- a/initctl/CMakeLists.txt
+++ b/initctl/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required (VERSION 2.6)
 
 project(INITCTL)
 
-include_directories("${LIBSYSAPI_SOURCE_DIR}" "${BINSTREAM_SOURCE_DIR}")
+include_directories("${LIBSYSAPI_SOURCE_DIR}"
+		    "${LIBBINSTREAM_SOURCE_DIR}")
 
 add_executable(initctl
    main.cpp
