--- a/test-config/CMakeLists.txt
+++ b/test-config/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 
+project(TEST_CONFIG)
+
 find_package(Boost 1.48 COMPONENTS unit_test_framework filesystem system REQUIRED)
 
 include_directories("${LIBINITD_COMMON_SOURCE_DIR}"
@@ -8,8 +10,8 @@ include_directories("${LIBINITD_COMMON_SOURCE_DIR}"
 		    "${LIBSYSAPI_SOURCE_DIR}"
 		    "${Boost_INCLUDE_DIR}")
 
-add_executable(initd-config-test
+add_executable(test-config
    main.cpp
 )
 
-target_link_libraries(initd-config-test initd-readconfig initd-config sysapi ${Boost_LIBRARIES})
+target_link_libraries(test-config initd-readconfig initd-config sysapi ${Boost_LIBRARIES})
