fixes for CMakeLists.txt

--- a/initctl/CMakeLists.txt
+++ b/initctl/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required (VERSION 2.6)
 
 project(INITCTL)
 
+find_package(Boost 1.48)
+
 include_directories("${LIBSYSAPI_SOURCE_DIR}"
-		    "${LIBBINSTREAM_SOURCE_DIR}")
+                    "${LIBBINSTREAM_SOURCE_DIR}"
+                    "${Boost_INCLUDE_DIR}")
 
 add_executable(initctl
    main.cpp
