--- a/demo.conf
+++ b/demo.conf
@@ -94,6 +94,20 @@ task task_3 = start_stop
     },
 };
 
+task sh = respawn
+{
+    start = command
+    {
+        cmd = "/bin/bash",
+        working_directory = "/"
+    },
+    stop = command
+    {
+        cmd = "/bin/false",
+        working_directory = "/"
+    },
+};
+
 print_hostname_before depends print_hello;
 initialize_hostname depends print_hostname_before;
 print_hostname_after depends initialize_hostname;
@@ -102,4 +116,4 @@ task_1 depends initialize_hostname;
 task_2 depends initialize_hostname;
 task_3 depends initialize_hostname;
 
-run_level default : print_hostname_after, task_1, task_2, task_3;
+run_level default : print_hostname_after, task_1, task_2, task_3, sh;
